se agrego populate y parte de pagination se agrego boton add-cart

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -9,4 +9,5 @@
 <body>
     {{{body}}}
 </body>
+<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" type="text/css" media="all">
 </html>
